feat: create permission to access a method
