# app/Http/Controllers/PermissionController.php
@@ -3,7 +3,8 @@
 namespace App\Http\Controllers;
 
 use App\Filters\PermissionFilter;
-use App\Http\Requests\PermissionRequest;
+use App\Http\Requests\PermissionStoreRequest;
+use App\Http\Requests\PermissionUpdateRequest;
 use App\Http\Resources\PermissionsResource;
 use App\Models\Permission;
 use Illuminate\Http\Resources\Json\AnonymousResourceCollection;
@@ -12,7 +13,7 @@ use Illuminate\Http\Resources\Json\JsonResource;
 class PermissionController extends Controller
 {
     /**
-     * @OA\Get (path="/permission", tags={"Permission"},
+     * @OA\Get (path="/permission", tags={"Permission"}, security={{ "Bearer":{} }},
      *     @OA\Parameter (name="description", in="query", required=false),
      *     @OA\Parameter (name="permission", in="query", required=false),
      *     @OA\Parameter (name="page", in="query", required=false, example=1, @OA\Schema(type="integer")),
@@ -34,9 +35,9 @@ class PermissionController extends Controller
     }
 
     /**
-     * @OA\Post(path="/permission", tags={"Permission"},
+     * @OA\Post(path="/permission", tags={"Permission"}, security={{ "Bearer":{} }},
      *      @OA\RequestBody(required=true,
-     *          @OA\JsonContent(ref="#/components/schemas/PermissionRequest")
+     *          @OA\JsonContent(ref="#/components/schemas/PermissionStoreRequest")
      *      ),
      *      @OA\Response(response=201, description="Successful operation",
      *          @OA\JsonContent(ref="#/components/schemas/PermissionsResource")
@@ -47,17 +48,17 @@ class PermissionController extends Controller
      *      @OA\Response(response=403, description="Forbidden")
      * )
      *
-     * @param PermissionRequest $request
+     * @param PermissionStoreRequest $request
      * @return JsonResource
      */
-    public function store(PermissionRequest $request): JsonResource
+    public function store(PermissionStoreRequest $request): JsonResource
     {
         return PermissionsResource::make(Permission::create($request->all()));
     }
 
     /**
      *
-     * @OA\Get(path="/permission/{id}", tags={"Permission"},
+     * @OA\Get(path="/permission/{id}", tags={"Permission"}, security={{ "Bearer":{} }},
      *     @OA\Parameter(name="id", in="path", required=true, @OA\Schema(type="integer")),
      *     @OA\Response(response=200, description="Successful operation",
      *         @OA\JsonContent(ref="#/components/schemas/PermissionsResource")
@@ -77,10 +78,10 @@ class PermissionController extends Controller
     }
 
     /**
-     * @OA\Put(path="/permission/{id}", tags={"Permission"},
+     * @OA\Put(path="/permission/{id}", tags={"Permission"}, security={{ "Bearer":{} }},
      *     @OA\Parameter(name="id", in="path", required=true, @OA\Schema(type="integer")),
      *     @OA\RequestBody(required=true,
-     *         @OA\JsonContent(ref="#/components/schemas/PermissionRequest")
+     *         @OA\JsonContent(ref="#/components/schemas/PermissionUpdateRequest")
      *     ),
      *     @OA\Response(response=200, description="Successful operation",
      *         @OA\JsonContent(ref="#/components/schemas/PermissionsResource")
@@ -92,11 +93,11 @@ class PermissionController extends Controller
      *     @OA\Response(response=422, description="Unprocessable Entity")
      * )
      *
-     * @param PermissionRequest $request
+     * @param PermissionUpdateRequest $request
      * @param int $id
      * @return JsonResource
      */
-    public function update(PermissionRequest $request, int $id): JsonResource
+    public function update(PermissionUpdateRequest $request, int $id): JsonResource
     {
         $permission = $this->getPermission($id);
         $permission->update($request->all());
@@ -105,7 +106,7 @@ class PermissionController extends Controller
     }
 
     /**
-     * @OA\Delete(path="/permission/{id}", tags={"Permission"},
+     * @OA\Delete(path="/permission/{id}", tags={"Permission"}, security={{ "Bearer":{} }},
      *     @OA\Parameter(name="id", in="path", required=true, @OA\Schema(type="integer")),
      *     @OA\Response (response="200", description="Successful operation",
      *         @OA\JsonContent(type="array", @OA\Items(ref="#/components/schemas/PermissionsResource"))
